--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/LegusX/hordesauction#readme",
   "dependencies": {
+    "express": "^4.17.1",
     "mongodb": "^3.5.7"
   }
 }
