A TON of work towards signup/login

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/LegusX/hordesauction#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "google-auth-library": "^6.0.6",
     "mongodb": "^3.5.7"
   }
 }
