--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/LegusX/hordesauction#readme",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "google-auth-library": "^6.0.6",
     "mongodb": "^3.5.7"
