--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "google-auth-library": "^6.0.6",
-    "mongodb": "^3.5.7"
+    "mongodb": "^3.5.7",
+    "sanitize": "^2.1.0",
+    "uuid": "^8.3.0"
   }
 }
