--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "scripts": {
     "start": "snowpack dev",
-    "build": "snowpack build",
-    "test": "web-test-runner \"src/**/*.test.js\""
+    "build": "snowpack build"
   },
   "dependencies": {
     "svelte": "^3.24.0"
@@ -10,10 +9,6 @@
   "devDependencies": {
     "@snowpack/plugin-dotenv": "^2.0.5",
     "@snowpack/plugin-svelte": "^3.4.0",
-    "@snowpack/web-test-runner-plugin": "^0.1.5",
-    "@testing-library/svelte": "^3.0.0",
-    "@web/test-runner": "^0.10.0",
-    "chai": "^4.2.0",
     "snowpack": "^2.18.4"
   }
 }
